# s2gos-simulator

./: .gitignore  .pre-commit-config.yml  README.md  defaults.yaml  mkdocs.yml  pyproject.toml
docs/: about.md  index.md  setup.md
docs/api/: illumination.md  measurements.md  sensors.md  simulation.md  spectral.md  viewing.md
src/s2gos_simulator/: __init__.py  _version.py  bhr_processor.py  brf_processor.py  config.py  config_v2.py  hdrf_processor.py  illumination.py  irradiance_processor.py  reflectance_processor.py  sensors.py  srf.py  terrain_query.py
src/s2gos_simulator/backends/: __init__.py  base.py  eradiate_backend.py  eradiate_backend_v2.py  eradiate_materials.py  registry.py
src/s2gos_simulator/backends/eradiate/: __init__.py  atmosphere_builder.py  backend.py  constants.py  eradiate_translator.py  experiment.py  geometry_utils.py  reflectance_computation.py  renderer.py  result_processor.py  sensor_translator.py  simulator.py  surface_builder.py  surfaces.py
src/s2gos_simulator/config/: __init__.py  illumination.py  measurements.py  sensors.py  simulation.py  spectral.py  viewing.py
src/s2gos_simulator/processors/: __init__.py  post_processor.py  sensor_processor.py
src/s2gos_simulator/setting/: __init__.py  _settings.py
tests/: conftest.py  test_illumination_translation.py  test_pixel_measurement_expansion.py  test_reflectance_computation.py  test_sensor_translation.py  test_simulation_config_serialization.py  test_simulation_config_validation.py  test_srf_translation.py
